# pifacedigital-web-api

./: LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
pifacedigital_web_api/: __init__.py
systemd/: pifacedigital-web-api.service
tests/: conftest.py  test_input.py  test_output.py
