[project]
name = "pifacedigital-web-api"
version = "0.3.0"
authors = [
  { name="Erik Petersen", email="eht@it-trans.dk" },
]
description = "Web API for interacting with the PiFace Digital expansion board on Raspberry Pi, written in Python using Flask and Flask-RESTful."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "flask-restful",
    "pifacecommon",
    "pifacedigitalio",
    "waitress"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    ".gitignore",
    ".flake8",
    "LICENSE.txt",
    "Makefile",
     "requirements-dev.txt",
    "requirements.txt",
    "tests/",
]

[tool.flit.external-data]
directory = "systemd"

[project.scripts]
pifacedigital-web-api = "pifacedigital_web_api.__init__:main"
